add open source licenses page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Shopping List</string>
-    <string name="save_item">保存</string>
+    <string name="save_item">Save</string>
+    <string name="open_source_licenses">Open Source Licenses</string>
 </resources>
