--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Shopping List</string>
     <string name="save_item">Save</string>
     <string name="open_source_licenses">Open Source Licenses</string>
+    <string name="more_menu_description">More</string>
 </resources>
